# DriverlessCarChallenge_MTARacer

round_1/DriverlessCar/arduino/arduino_old/test_library_encoder/: test_library_encoder.ino
round_1/DriverlessCar/arduino/dev_sketches/encoder_count_to_distance/: encoder_count_to_distance.ino
round_1/DriverlessCar/arduino/dev_sketches/encoder_test/: README.txt  encoder_test.ino
round_1/DriverlessCar/arduino/dev_sketches/pid/test_pid_no_load/: fdc_cfg.h  fdc_pid.c.bak
round_1/DriverlessCar/arduino/dev_sketches/sonar_sensor_test/: sonar_sensor_test.ino
round_1/DriverlessCar/arduino/dev_sketches/test_button/: test_button.ino
round_1/DriverlessCar/arduino/dev_sketches/test_esc_servo_output_fixed/: test_esc_servo_output_fixed.ino
round_1/DriverlessCar/arduino/dev_sketches/test_esc_servo_output_from_serial/: README.txt
round_1/DriverlessCar/carControl/src/0.3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
round_1/DriverlessCar/carControl/src/0.3/lane_detection/: Makefile  api_lane_detection.cpp~  cmake_install.cmake
round_1/DriverlessCar/carControl/src/0.3/main_pid/: automaticCar.cpp  automaticCar.cpp~
round_1/DriverlessCar/carControl/src/0.3/peripheral_driver/: Makefile  cmake_install.cmake
round_1/DriverlessCar/carControl/src/0.3/stereo_vision/: Makefile  cmake_install.cmake
round_1/JHPWMDriver/example/: servoExample.cpp~
round_1/carControl_astra/carControl/src/0.3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~
round_1/carControl_astra/carControl/src/0.3/lane_detection/: CMakeLists.txt  cmake_install.cmake  test_lane_detection.cpp
round_1/carControl_astra/carControl/src/0.3/lane_detection/tracking/: COpticalFlowTracker.cpp  COpticalFlowTracker.h  CVehicleCounter.h  CVehicleDetector.h  def.h
round_1/carControl_astra/carControl/src/0.3/main_pid/: main2.cpp  main3Hand.cpp
round_1/carControl_astra/carControl/src/0.3/peripheral_driver/: Makefile  cmake_install.cmake
round_1/carControl_astra/carControl/src/0.3/peripheral_driver/i2c/: Makefile  api_control_steering_throttle.cpp~  api_i2c_pwm.cpp  api_i2c_pwm.cpp~  api_i2c_pwm.h  api_uart.h  pca9685.h
round_1/carControl_astra/carControl/src/0.3/peripheral_driver/pwm_pca9685/: pca9685.cpp
round_1/carControl_astra/carControl/src/0.3/peripheral_driver/uart/: cmake_install.cmake
round_1/carControl_astra/carControl/src/0.3/stereo_vision/: CMakeCache.txt  CMakeLists.txt~  Makefile  api_kinect_cv.cpp  api_kinect_cv_backup.cpp  api_kinect_cv_backup.h  test-kinect-cv2-2  test_kinect_cv2_2.cpp
round_1/carControl_astra/carControl/src/0.3/utils/: utils.h  utils.h~
round_1/carControl_astra/openni_opencv/src/: CMakeCache.txt  CMakeLists.txt  CMakeListsOld.txt  Makefile  cmake_install.cmake  main.cpp  main_origin.cpp
round_2/DriverlessCar/arduino/dev_sketches/: README.txt
round_2/DriverlessCar/arduino/dev_sketches/battery_test/: battery_test.ino
round_2/DriverlessCar/arduino/dev_sketches/encoder_and_esc_test/: encoder_and_esc_test.ino
round_2/DriverlessCar/arduino/dev_sketches/old_uart_protocol_to_servo_output/: old_uart_protocol_to_servo_output.ino
round_2/DriverlessCar/arduino/dev_sketches/old_uart_protocol_to_servo_output_add_sonar/: README.txt  old_uart_protocol_to_servo_output_add_sonar.ino
round_2/DriverlessCar/arduino/dev_sketches/pid/test_pid_no_load/: fdc_pid.h  test_pid_no_load.ino
round_2/DriverlessCar/arduino/dev_sketches/pid/test_pid_with_load/: fdc_cfg.h  test_pid_with_load.ino
round_2/DriverlessCar/arduino/dev_sketches/steering_test/: steering_test.ino
round_2/DriverlessCar/arduino/dev_sketches/test_esc_servo_output_fixed/: README.txt
round_2/DriverlessCar/arduino/dev_sketches/test_esc_servo_output_from_serial/: test_esc_servo_output_from_serial.ino
round_2/DriverlessCar/carControl/src/0.3/: CMakeCache.txt  Makefile  cmake_install.cmake  color.avi  gray.avi  thetaLog.txt
round_2/DriverlessCar/carControl/src/0.3/lane_detection/: Makefile  api_lane_detection.cpp  api_lane_detection.h  cmake_install.cmake
round_2/carControl_astra/carControl/src/0.3/: Makefile  cmake_install.cmake
round_2/carControl_astra/carControl/src/0.3/peripheral_driver/i2c/: CMakeLists.txt  api_i2c_pwm.h~  cmake_install.cmake  test_steering_throttle.cpp  test_steering_throttle.cpp~
round_2/carControl_astra/carControl/src/0.3/peripheral_driver/pwm_pca9685/: CMakeLists.txt  api_control_steering_throttle.h  test_steering_throttle.cpp
round_2/carControl_astra/openni_opencv/src/: main.cpp~  test-openni-opencv
(+51 files in other folders)
